[package]
name = "rebound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
config = "0.13.1"
tiny_http = {version = "0.11", features = [ "ssl-openssl" ] }
flume = "0.10.14"
regex = "1.6.0"
async-trait = "0.1.56"
surf = "2.3.2"
url = "2.2.2"